--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <r>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, temporibus illo.</r>
+    <script src="/script.js"></script>
 </body>
 </html>
